# rust-aoc2024

./: .env  Cargo.toml  day-01.bench.txt
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: benchmarks.rs
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: part1.rs  part2.rs
