[workspace]
members = [
    "day-*",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
]
exclude = ["scripts"]
default-members = ["day-*"]
resolver = "2"

[workspace.dependencies]
divan = "0.1.7"
glam = "0.29.0"
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
rayon = "1.10.0"
regex = "1.11.1"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
thiserror = "2.0.3"

[workspace.dependencies.test-log]
version = "0.2.13"
features = ["trace"]
default-features = false
